# dfxml_python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTE.md  ChangeLog  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: continuous-integration.yml  supply-chain.yml
demos/: demo_fiwalk_diskimage.py  demo_mac_timeline.py  demo_mac_timeline_iter.py  demo_mac_timeline_objects.py  demo_piecewise.py  demo_plot_times.py  demo_readtimes.py  demo_registry_timeline.py  demo_sizes.py  demo_spark.py
demos/spark/: demo_spark.py
demos/vmstats/: vmstats.py  vmstats_decode.py
dfxml/: __init__.py  dfxml_html.py  fiwalk.py  histogram.py  objects.py  writer.py
dfxml/make_differential_dfxml/: __init__.py
dfxml/tests/: ByteRuns_test.py  CellObject_test.py  DFXMLObject_program_test.py  DiskImageObject_test.py  FileObject_allocation_test.py  FileObject_byte_run_facets_test.py  FileObject_externals_test.py  FileObject_from_stat_test.py  FileObject_test.py  LibraryObject_read_test.py  LibraryObject_write_test.py  Makefile  PartitionObject_test.py  PartitionSystemObject_test.py  RegXMLObject_test.py  VolumeObject_externals_test.py  VolumeObject_hash_test.py  VolumeObject_test.py  diff_file_ignore_sample_dfxml_test.py  diff_file_ignore_test.py  diffing_ByteRuns_test.py  diffing_CellObject_test.py  diffing_FileObject_test.py  diffing_HiveObject_test.py  diffing_TimestampObject_test.py  diffing_VolumeObject_test.py  error_test.py  libtest.py  objects_test.py  (+2 more)
python/: Makefile  README.org  imicrosoft_redact.py
samples/: Makefile  difference_test_0.xml  difference_test_1.xml  difference_test_2.xml  difference_test_3.xml  tcpflow_zip_generic_header.xml
tests/: Makefile  README.md  test_objects.py  test_reads.py  test_version.py
(+57 files in other folders)
