[metadata]
name = dfxml
version = attr: dfxml.__version__
url = https://github.com/dfxml-working-group/dfxml_python
classifiers =
    License :: Public Domain
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    dfxml_cwd = dfxml.walk_to_dfxml:main
    dfxml_info = dfxml.bin.dfxinfo:main
    dfxml_idiff = dfxml.bin.idifference2:main
    dfxml_ireport = dfxml.bin.ireport:main
    dfxml_iverify = dfxml.bin.iverify:main
    dfxml_rdiff = dfxml.bin.rdifference:main
    make_differential_dfxml = dfxml.make_differential_dfxml:main
