[metadata]
name = dfxml
version = attr: dfxml.__version__
url = https://github.com/dfxml-working-group/dfxml_python
classifiers =
    License :: Public Domain
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6

# See CONTRIBUTE.md before adding a console script line.
[options.entry_points]
console_scripts =
    make_differential_dfxml = dfxml.bin.make_differential_dfxml:main
    walk_to_dfxml = dfxml.bin.walk_to_dfxml:main
